# mcp-switch

./: .gitignore  .releaserc  CHANGELOG.md  COMMIT_EDITMSG  CONTRIBUTING.md  README.md  __patch.cjs  _apply_fixes.cjs  index.html  package-lock.json  package.json  stage-icons.ps1  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.diff-tmp/: release-fixed.yml  release-publish-replacement.yml
.github/workflows/: release.yml  semantic-release.yml
scripts/: generate-icons.mjs  generate-update-json.mjs  sync-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_control.rs  atomic.rs  commands.rs  lib.rs  main.rs  mcp_json.rs  mcp_test.rs  paths.rs  runner.rs  store.rs  tray.rs  types.rs  winshim.rs
src-tauri/src/adapter/: antigravity.rs  claude.rs  claude_desktop.rs  codex.rs  gemini.rs  hermes.rs  mod.rs  opencode.rs
src/lib/: types.ts
src/styles/: global.css
