[package]
name = "mcp-switch"
version = "0.1.0"
description = "Cross-platform desktop switcher for MCP servers"
authors = ["you"]
edition = "2021"
repository = "https://github.com/StormShynn/mcp-switch"

[lib]
name = "mcp_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
thiserror = "2"
